<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.splash.SplashFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/entry2"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/bg_button"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeDscText"
        android:layout_width="293dp"
        android:layout_height="23dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/the_home_for_a_fashionista"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeDscText"
        app:layout_constraintEnd_toEndOf="@+id/welcomeDscText"
        app:layout_constraintStart_toStartOf="@+id/welcomeDscText" />


</androidx.constraintlayout.widget.ConstraintLayout>